[build-system]
requires = ["flit-core @ git+https://github.com/astrofrog/flit@default-extras-pep#subdirectory=flit_core"]
build-backend = "flit_core.buildapi"

[project]
name = "demo_pep_771"
version = "1.0.0"
authors = [
    {name = "Thomas Robitaille", email = "thomas.robitaille@gmail.com"},
    {name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com"},
]
dynamic = ["version", "description"]
default-optional-dependencies = ["recommended"]

[project.optional-dependencies]
recommended = ["numpy"]
accelerated = ["cupy"]
minimal = []
